--- a/.github/workflows/build_with_cov.yml
+++ b/.github/workflows/build_with_cov.yml
@@ -55,3 +55,4 @@ jobs:
         with:
           token: ${{ secrets.CODECOV }}
           files: ${{ github.workspace }}/build/app.info
+          verbose: true
