--- a/.github/workflows/build_with_cov.yml
+++ b/.github/workflows/build_with_cov.yml
@@ -49,10 +49,12 @@ jobs:
           ./bin/lua
           lcov --no-external --directory ./ --capture --output-file app.info --ignore-errors source 
           ls -l app.info
+          lcov --list app.info
+          bash <(curl -s https://codecov.io/bash) -t ${{ secrets.CODECOV }} -f coverage.info || echo "Codecov did not collect coverage reports"
           
-      - name: Upload coverage reports to Codecov
-        uses: codecov/codecov-action@v3
-        with:
-          token: ${{ secrets.CODECOV }}
-          files: ${{ github.workspace }}/build/app.info
-          verbose: true
+      # - name: Upload coverage reports to Codecov
+      #   uses: codecov/codecov-action@v3
+      #   with:
+      #     token: ${{ secrets.CODECOV }}
+      #     files: ${{ github.workspace }}/build/app.info
+      #     verbose: true
