--- a/.github/workflows/build_with_cov.yml
+++ b/.github/workflows/build_with_cov.yml
@@ -47,9 +47,9 @@ jobs:
           ctest -V
           ./bin/bench_mark
           ./bin/lua
-          lcov --no-external --directory ./ --capture --output-file app.info --ignore-errors source 
-          ls -l app.info
-          lcov --list app.info
+          lcov --no-external --directory ./ --capture --output-file coverage.info --ignore-errors source 
+          ls -l coverage.info
+          lcov --list coverage.info
           bash <(curl -s https://codecov.io/bash) -t ${{ secrets.CODECOV }} -f coverage.info || echo "Codecov did not collect coverage reports"
           
       # - name: Upload coverage reports to Codecov
