--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -8,6 +8,12 @@ include_directories(../include)
 include_directories(../src)
 include_directories(../src/platform)
 
+IF (WIN32)
+    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,--export-all-symbols")
+ELSE ()
+    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,-E")
+ENDIF ()
+
 add_executable(bench_mark ${BENCHMARK_SRC_LIST})
 
 target_link_libraries(bench_mark PRIVATE fakelua benchmark)
