--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -17,9 +17,9 @@ include_directories(./platform)
 add_library(fakelua STATIC ${FAKELUA_SRC_LIST})
 
 IF (WIN32)
-    set(TARGET_LIB glog::glog gflags_nothreads_static gccjit)
+    set(TARGET_LIB glog::glog gflags::gflags gccjit)
 ELSE ()
-    set(TARGET_LIB profiler_static glog::glog gflags_nothreads_static gccjit)
+    set(TARGET_LIB profiler_static glog::glog gflags::gflags gccjit)
 ENDIF ()
 
 if (USE_COV)
