--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -14,12 +14,12 @@ aux_source_directory(./ FAKELUA_SRC_LIST)
 include_directories(./)
 include_directories(../include)
 include_directories(./platform)
-add_library(fakelua STATIC ${FAKELUA_SRC_LIST})
+add_library(fakelua SHARED ${FAKELUA_SRC_LIST})
 
 IF (WIN32)
     set(TARGET_LIB glog::glog gflags::gflags gccjit)
 ELSE ()
-    set(TARGET_LIB profiler_static glog::glog gflags::gflags gccjit)
+    set(TARGET_LIB profiler_static)
 ENDIF ()
 
 if (USE_COV)
