--- a/.github/workflows/cppcheck.yml
+++ b/.github/workflows/cppcheck.yml
@@ -1,4 +1,4 @@
-name: Build
+name: CppCheck
 
 on:
   push:
@@ -40,3 +40,10 @@ jobs:
           cd ..
           cd ..
           cppcheck --version
+          FILES=`find src/ cmd/ -type f -name "*.cpp" -o -name "*.h"|grep -v parser|grep -v scanner`
+          cppcheck --language=c++ --check-level=exhaustive --max-ctu-depth=64 -j8 $FILES 2> err.txt
+          cat err.txt
+          if [[ -s err.txt ]]
+          then
+            exit 1
+          fi
