--- a/.github/workflows/build_with_cov.yml
+++ b/.github/workflows/build_with_cov.yml
@@ -47,6 +47,8 @@ jobs:
           ctest -V
           ./bin/bench_mark
           ./bin/lua
+          echo "function main() return 0 end" > test.lua
+          ./bin/lua test.lua
           lcov --directory ./ --capture --output-file coverage.info --ignore-errors source --ignore-errors mismatch      
           ls -l coverage.info
           lcov --list coverage.info
