change to CPM, remove glog, use local log

--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -2,6 +2,42 @@ cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
 
 project(benchmark)
 
+#add benchmark
+CPMAddPackage(
+        NAME benchmark
+        GITHUB_REPOSITORY google/benchmark
+        GIT_TAG v1.8.3
+        OPTIONS
+        "BENCHMARK_ENABLE_TESTING Off"
+        "BENCHMARK_ENABLE_GTEST_TESTS Off"
+        "BENCHMARK_ENABLE_ASSEMBLY_TESTS Off"
+        "BENCHMARK_ENABLE_EXCEPTIONS Off"
+        "BENCHMARK_ENABLE_INSTALL Off"
+        "BENCHMARK_ENABLE_LTO Off"
+        "BENCHMARK_ENABLE_NO_EXCEPTIONS Off"
+        "BENCHMARK_ENABLE_TESTING Off"
+        "BENCHMARK_ENABLE_TESTING Off"
+        "BENCHMARK_USE_LIBCXX Off"
+        "BENCHMARK_USE_LIBCXXABI Off"
+        "BENCHMARK_USE_SANITIZER Off"
+        "BENCHMARK_USE_VALGRIND Off"
+        "BENCHMARK_DOWNLOAD_DEPENDENCIES Off"
+        "BENCHMARK_ENABLE_GTEST_TESTS Off"
+        "BENCHMARK_ENABLE_EXCEPTIONS Off"
+        "BENCHMARK_ENABLE_INSTALL Off"
+        "BENCHMARK_ENABLE_LTO Off"
+        "BENCHMARK_ENABLE_NO_EXCEPTIONS Off"
+        "BENCHMARK_ENABLE_TESTING Off"
+        "BENCHMARK_ENABLE_TESTING Off"
+        "BENCHMARK_USE_LIBCXX Off"
+        "BENCHMARK_USE_LIBCXXABI Off"
+        "BENCHMARK_USE_SANITIZER Off"
+        "BENCHMARK_USE_VALGRIND Off"
+        "BENCHMARK_DOWNLOAD_DEPENDENCIES Off"
+)
+
+include_directories(${magic_enum_SOURCE_DIR}/include/magic_enum)
+
 aux_source_directory(./ BENCHMARK_SRC_LIST)
 include_directories(./)
 include_directories(../include)
@@ -16,7 +52,7 @@ ENDIF ()
 
 add_executable(bench_mark ${BENCHMARK_SRC_LIST})
 
-target_link_libraries(bench_mark PRIVATE fakelua benchmark glog::glog gflags::gflags gccjit)
+target_link_libraries(bench_mark PRIVATE fakelua benchmark gccjit)
 
 add_custom_command(
         TARGET bench_mark
