--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,14 @@ cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
 
 project(libfakelua)
 
+#add magic_enum
+CPMAddPackage(
+        NAME magic_enum
+        GITHUB_REPOSITORY Neargye/magic_enum
+        VERSION 0.9.5
+)
+include_directories(${magic_enum_SOURCE_DIR}/include/magic_enum)
+
 aux_source_directory(compile/bison FAKELUA_SRC_LIST)
 aux_source_directory(compile/flex FAKELUA_SRC_LIST)
 aux_source_directory(./compile FAKELUA_SRC_LIST)
@@ -17,9 +25,7 @@ include_directories(./platform)
 add_library(fakelua SHARED ${FAKELUA_SRC_LIST})
 
 IF (WIN32)
-    set(TARGET_LIB glog::glog gflags::gflags gccjit)
-ELSE ()
-    set(TARGET_LIB profiler_static)
+    set(TARGET_LIB gccjit)
 ENDIF ()
 
 if (USE_COV)
