--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,9 @@ project(fakelua CXX)
 
 set(CMAKE_CXX_STANDARD 20)
 
+# add dependencies
+include(cmake/CPM.cmake)
+
 # place binaries and libraries according to GNU standards
 include(GNUInstallDirs)
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR})
@@ -13,7 +16,7 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR})
 set(ENV{FAKELUA_HOME} "${CMAKE_CURRENT_SOURCE_DIR}/")
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wno-unused-local-typedefs -Wno-unused-function -std=c++23 -DNDEBUG -g3 -ggdb3 -fPIC")
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -DNDEBUG -O2 -g3 -ggdb3 -fPIC")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -DNDEBUG -g3 -ggdb3 -fPIC")
 
 option(USE_ASAN "use asan" OFF)
 if (USE_ASAN)
@@ -30,8 +33,10 @@ endif ()
 
 IF (WIN32)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0")
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O0")
 ELSE ()
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2")
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O2")
 ENDIF ()
 
 find_program(CCACHE_PROGRAM ccache)
@@ -39,16 +44,6 @@ if (CCACHE_PROGRAM)
     message("build with ccache")
     set(CMAKE_CXX_COMPILER_LAUNCHER "${CCACHE_PROGRAM}")
 endif ()
-
-include(cmake/gflags.cmake)
-IF (WIN32)
-ELSE ()
-    include(cmake/gperftools.cmake)
-ENDIF ()
-include(cmake/benchmark.cmake)
-include(cmake/googletest.cmake)
-include(cmake/glog.cmake)
-include(cmake/magic_enum.cmake)
 
 add_subdirectory(src)
 add_subdirectory(cmd)
