--- a/.github/workflows/build_with_asan.yml
+++ b/.github/workflows/build_with_asan.yml
@@ -18,6 +18,15 @@ jobs:
         uses: pkgxdev/setup@v1
         with:
           +: gcc@13
+          
+      - name: Setup Lua
+        run: |
+          wget https://www.lua.org/ftp/lua-5.4.7.tar.gz
+          tar -xf lua-5.4.7.tar.gz
+          cd lua-5.4.7
+          make linux
+          sudo make install
+          cd ..
 
       - name: Prepare
         run: |
